# lol

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/backend/: BoundingBox.hpp  NonCopyable.hpp  Transformable.hpp
include/lol/: BoundingBox.hpp  Buffer.hpp  Camera.hpp  Drawable.hpp  Image.hpp  Layer.hpp  ObjectManager.hpp  Shader.hpp  Texture.hpp  Transformable.hpp  VertexArrayObject.hpp  lol.hpp
include/lol/buffers/: ElementBuffer.hpp  VertexBuffer.hpp
include/lol/util/: BoundingBox.hpp  Enums.hpp  Exceptions.hpp  Factory.hpp  NonCopyable.hpp  ObjectManager.hpp
src/: Buffer.cpp  Drawable.cpp  Image.cpp  Layer.cpp  ObjectManager.cpp  Shader.cpp  Texture.cpp  Transformable.cpp  VertexArrayObject.cpp
src/buffers/: ElementBuffer.cpp  VertexBuffer.cpp
